# ledgr-engine

./: .gitignore  Cargo.toml
docs/: DATABASE_SPEC.md
src/: cli.rs  encoders.rs  engine.rs  error.rs  file_format.rs  hash_chain.rs  indexes.rs  lib.rs  main.rs  memtable.rs  models.rs  simd_scan.rs  sparse_index.rs  sstable.rs  storage.rs  tests.rs  utils.rs  wal.rs
